@@ -17,15 +17,17 @@
 
 package org.apache.solr.util;
 
-import org.apache.lucene.index.*;
-import org.apache.lucene.index.MergePolicy.MergeSpecification;
-import org.apache.lucene.util.LuceneTestCase;
+import java.io.IOException;
+import java.util.Map;
 
+import org.apache.lucene.index.IndexWriter;
+import org.apache.lucene.index.MergePolicy;
+import org.apache.lucene.index.MergeTrigger;
+import org.apache.lucene.index.SegmentCommitInfo;
+import org.apache.lucene.index.SegmentInfos;
+import org.apache.lucene.util.LuceneTestCase;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-
-import java.util.Map;
-import java.io.IOException;
 
 /**
  * A {@link MergePolicy} with a no-arg constructor that proxies to a 
@@ -53,11 +55,6 @@ public final class RandomMergePolicy extends MergePolicy {
     this.inner = inner;
     log.info("RandomMergePolicy wrapping {}: {}",
              inner.getClass(), inner);
-  }
-
-  @Override
-  public void close() {
-    inner.close();
   }
 
   @Override
